# deed-dish-scraper

./: .gitignore  Dockerfile  README.md  database.py  db_config.py  docker-compose.yml  initialize_postgres.py  load_scraped_data.py  load_to_postgres.py  main.py  models.py  notebook.ipynb  open_data_to_postgres.sh  pyproject.toml  read_and_structure.py  requirements.txt  scrape.py  scraped_data_to_postgres.py  scraper.py  utils.py
