[project]
name = "deeds-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "logger>=1.4",
    "logging>=0.4.9.6",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41"
]
