[project]
name = "deeds-research"
version = "0.1.0"
description = "A tool for pulling document metadata form the Cook County Recorder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
]
